crates/toml_edit/tests/fixtures/invalid/table/duplicate.stderr
TOML parse error at line 4, column 1
  |
4 | [a]
  | ^
Invalid table header
Duplicate key `a` in document root
